docroot/modules/custom/planet_language_switcher/css/language-switcher.css
.language-switcher {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: flex-start;
  position: absolute;
  max-width: 220px;
  width: 100%;
}

.language-switcher__wrapper {
  display: flex;
  width: 100%;
}

.language-switcher__button-wrapper {
  display: inline-block;
  position: relative;
  color: #FFFFFF;
  width: 100%;
}
ul.language-switcher__dropdown-menu {
  padding: 0;
}
.language-switcher__button {
  display: flex;
  position: relative;
  padding: 1em;
  margin-right: 0;
  cursor: pointer;
  border: 1px solid rgba(238,238,238,0.3);
  border-radius: 0.5rem;
}
.language-switcher__link {
  text-decoration: none;
  color:white;
  padding: 1em;
  width: 100%;
  display: flex;
  align-items: center;
  text-decoration: none;
}
.language-switcher__link:hover, .language-switcher__button:hover {
  background-color: rgba(255,255,255,0.1);
}
.language-switcher__drop-down {
  display: none;
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 5;
  background-color: #000;
  border: 1px solid rgba(238,238,238,0.3);
  border-radius: 0.5rem;
  /* margin-bottom: 45px; */
  max-height: 200px;
  overflow-y: scroll;
}
.language-switcher-select {
  padding-bottom: 10px
}

.language-switcher__item {
  display: flex;
  align-items: center;
  width: 100%;
}

.language-switcher__flag {
  margin-right: 10px; /* Adjust the margin as needed */
  height: 20px;
  width: 20px;
}
.language-switcher__select-menu {
  width: 100%;
}

/** Edit button toolbar */
a[href^="/node/"].toolbar-icon-edit.toolbar-item {
  background: white;
  color: #333 !important;
}

/** Modal dialog */
.ui-dialog-titlebar.ui-corner-all.ui-widget-header.ui-helper-clearfix {
  background: transparent;
  border: 0;
}
.ui-dialog-title {
  font-family: 'TT Commons';
  font-weight: 600;
  font-style: normal;
  font-size: 2rem;
}
.ui-dialog .ui-dialog-content {
  font-family: 'TT Commons';
  font-size: 1.2rem;
}
.webform-confirmation-modal {
  border-left: 0.45rem solid #ff0096 !important;
  border-radius: 0 !important;
  padding: 2rem;
  box-shadow: 0px 0px 2rem rgba(0,0,0,0.2);
}
.ui-button.ui-corner-all.ui-widget.ui-button-icon-only.ui-dialog-titlebar-close {
  border: 0;
  font-size: 1rem;
}
/** Menu */
@media (min-width: 992px) {
  .desktop-float-left {
    float: left
  }
  .menu-level-1-li.has-children {
    padding-right: 20px;
    margin-right: 0
  }
  .menu-level-1-li.has-children {
    background-image: url('/resources/icons/dropdown.svg');
    background-repeat: no-repeat;
    background-size: 15px;
    background-position: right center;
  }
  .megamenu-opened {
    border-bottom: 2px solid #e00083;
  }
}
@media (max-width: 991px) {
  .coh-container.cta-wrapper {
    margin-top: 20px;
  }
}
@media(max-width: 1599px) {
  .coh-container-fix {
    padding-right: 4rem;
    padding-left: 4rem;
  }
}
.cta-wrapper {
  display: flex;
  align-items: center;
}

.media-pp-left {
  flex-direction: row-reverse;
}

.content-centered {
  max-width: 900px;
  margin: 0 auto !important;
}
.slick-list {
  padding: 16px 0;
}

.coh-style-primary-dark-atom- > input {
  color: white;
  font-weight: 600;
  padding: 0 20px;
}
.coh-style-primary-dark-atom-:hover {
  cursor: pointer;
}


.planSwitch,
.planSwitch * {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.planSwitch {
  display: block;
  width: 100%;
  max-width: 30em;
  margin: 2em auto;
  height: 3em;
  border-radius: 5rem;
  background: transparent;
  position: relative;
  border: 2px solid #e00083;
}
.planSwitch input {
  display: none;
}
.planSwitch label {
  width: 33.3333%;
  float: left;
  text-align: center;
  height: 100%;
  color: white;
  position: relative;
  cursor: pointer;
  transition: all .2s ease-in-out;
  z-index: 3;
  font-weight: 600;
  line-height: 2.7rem;
}
.planSwitch input:checked + label {
  color: #000
}
.indicator {
  display: block;
  width: calc(33.3333% + 4px);
  height: calc(100% + 4px);
  background: white;
  border-radius: 3rem;
  position: absolute;
  top: -2px;
  transition: left .2s ease-in-out;
  z-index: 2;
  margin-left: -2px;
}

.planSwitch input:first-of-type:checked ~ .indicator {
  left: 0;
}
.planSwitch input:nth-of-type(2):checked ~ .indicator {
  left: 33.3333%;
}
.planSwitch input:nth-of-type(3):checked ~ .indicator {
  left: 66.6666%;
}
@media (min-width: 500px) {
  .planSwitch {
    font-size: 12pt;
  }
}
.planSwitch.planSwitch-black .indicator {
  background: black;
}
.planSwitch.planSwitch-black {
  max-width: 24rem;
}
.planSwitch-black input:checked + label {
  color: white;
}
.planSwitch-black input:nth-of-type(2):checked ~ .indicator {
  left: 50%;
}
.planSwitch-black .indicator {
  width: calc(50% + 4px);
}
.planSwitch-black label {
  width: 50%;
  color: black;
}
.environment-indicator article footer {
  display: none !important;
}
@media(min-width: 1024px) {
  .plnt-author-page {
    margin-bottom: 32px auto;
  }
}
.plnt-author-page {
  background: #202020;
  padding: 48px 0;
  color: white;
  margin-top: 0;
}
@media (max-width: 1023px) {
  .author-name span {
    font-size: 32px !important;
    margin-top: 16px !important
  }
  .article-card .author-name span, .article-date, .vertical-divider {
    font-size: 17.5px !important
  }

  .article-title a {margin-top: 8px !important}
  .author-photo {
    max-width: 200px;
    margin-bottom: 24px
  }
  .article-author .author-photo {
    margin-bottom: 0
  }
  .plnt-author-page {padding-top: 96px}
  .author-bio p {margin-top: 16px !important}
  .main-pills .main-pill {
    margin-right: 16px;
    margin-bottom: 16px
  }
}
@media (min-width: 1024px) {
  /** Fixes to allow for the transparent header */
  .plnt-author-page {
    padding-top: 144px;
  }
  .author-photo {
    margin: 0 auto
  }
}
.author-photo {
  overflow: hidden;
  background-color: gray;
  border-radius: 100rem;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  max-width: 160px;
  max-height: 160px;
}
.author-name span {
  font-size: 32px;
  font-weight: 600;
  line-height: 48px;
}
.author-role {
  font-size: 20px;
  font-weight: 300;
  margin-top: 8px;
}
.author-social {
  margin-top: 32px;
  color: white;
}
.author-social a {
  color: white;
  font-size: 18px;
  font-weight: 600;
  margin: 8px 0;
  display: inline-block;
}
.last-articles > h2 {
  text-align: center;
}
.last-articles-wrapper {
  padding: 55px 0
}

.breadcrumbs.text-white a {
  color: white;
  font-size: 18px;
  font-weight: 600;
}
.breadcrumbs {
  padding-bottom: 0px;
}
.author-photo div > div:first-child {
  display: none;
}
.author-photo img {
  display: block;
}

.plnt-author-page .author-info {
  padding: 48px 0 0 0;
  display: flex;
  align-items: center;
}
.author-bio p {
  font-size: 20px;
  padding-bottom: 24px;
  line-height: 1.4;
  margin-top: 18px;
}
.author-social h2 {
  font-weight: 600;
  font-size: 20px;
  margin-top: 14px;
  margin-bottom: 8px;
}
.last-articles h2 {
  font-weight: 600;
  font-size: 2rem;
}
.tags-pills.pink-pills span {
  border: 1px solid #e00083;
}
.tags-pills span {
  font-size: 16px;
  margin-bottom: 8px;
  font-weight: 600;
  padding: 8px 12px;
  margin-right: 16px;
  border: 1px solid #d1d1d1;
  border-radius: 5px;
  display: inline-block;
  cursor: pointer;
}
.article-title {
  padding-bottom: 16px;
}
.last-articles-cards {
  padding-top: 48px;
  padding-bottom: 24px;
}
.tags-pills {
  padding-bottom: 12px;
}
.article-card {
  border: 1px solid #d1d1d1;
  border-radius: 8px;
  width: 100%;
  margin-bottom: 16px;
  display: flex;
  flex-direction: column;
  cursor: pointer;
  transition: all .2s ease;
}
.article-card:hover {
  box-shadow: 0 6px 20px 0 rgba(34,34,34,0.16);
}
.article-card:hover .article-bg-image-wrapper {
  padding: 0;
} 
.article-card:hover .article-bg-image {
  border-radius: 8px 8px 0 0;
  height: 213px
}
.article-cards-wrapper {
  min-height: 600px
}
.article-cards-wrapper .coh-column {
  display: flex;
}
.main-pill {
  transition: all .2s ease;
}
.main-pills .main-pill {display: none}
.main-pills .main-pill.visible {display: inline-block}
.main-pill:not(.selected):hover {
  background: #f2d0e4;
}
.tags-pills .selected {
  color: white;
  background: #e00083;
}
.article-card .author-photo {
  width: 32px;
  height: 32px;
  margin-right: 16px;
}
.article-card .author-name span, .article-date, .vertical-divider {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.25rem;
  color: #545454;
}
.article-author {
  display: flex;
  align-items: center;
}
.article-author-and-date {
  display: flex;
  justify-content: left;
  align-items: center;
}
.vertical-divider {
  padding: 0 8px;
}
.article-bg-image-wrapper {
  padding: 5px 5px 0 5px;
  transition: all .2s ease;
}
.article-bg-image {
  height: 208px;
  background-color: #ddd;
  border-radius: 8px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  transition: all .2s ease;
}
.article-title a {
  font-size: 24px;
  font-weight: 600;
  line-height: 30px;
  display: block;
}
.article-card-content {
  padding: 16px;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: space-between;
}

.author-social img {
  width: 24px;
  height: auto;
  float: right;
  margin-right: 8px;
  margin-top: 3px;
  margin-left: 16px;
}
.author-social-icons-wrapper {
  height: 50px;
  display: block;
}
.last-articles ul, .last-articles ul li {
  list-style: none;
  padding-left: 0;
  margin-top: 10px;
  font-size: 1.1rem;
}
.last-articles a {
  color: black;
}
.linked-author-page img {
  border-radius: 30rem;
  height: 32px;
  width: 32px;
  margin-right: 16px
}
.linked-author-page {
  display: flex;
}
.author-bio p {
  font-size: 20px;
  font-weight: 300;
  margin-top: 32px;
}
.linked-author-page .author-name {
  font-weight: 300;
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #000;
}
/** Transparent header */
/* .planet-header-transparent .header-container {
  background: transparent;
} */
.external-main-tags {
  display: inline-block;
}
#load-more-button {
  display: inline-block;
  margin: 0 auto;
  border-radius: 300rem;
  color: white;
  font-weight: 600;
  padding: 20px 24px;
  font-size: 16px;
}
.load-more-wrapper {text-align: center;display: block;
  width: 100%;}

.load-more-wrapper img {
  display: inline-block;
  margin-left: 4px;
}

